# beansprout

./: .gitignore  AGENTS.md  Makefile  docker-compose.yml
_bmad/: config.toml  config.user.toml
_bmad-output/brainstorming/: brainstorming-session-2026-03-03-000000.md
_bmad-output/implementation-artifacts/: 1-1-user-registration.md  1-2-user-login.md  1-3-user-logout.md  1-4-profile-management.md  1-5-profile-photo-upload.md  2-1-season-library-browse.md  2-2-season-search-filter.md  2-3-season-detail-view.md  2-4-view-user-profiles.md  2-5-join-a-season.md  3-1-create-new-season.md  3-2-set-season-schedule.md  3-3-configure-season-settings.md  3-4-add-season-location.md  3-5-publish-season.md  3-6-close-season.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-22.md  implementation-readiness-report-2026-04-03.md  prd.md  product-brief-beansprout-2026-03-08.md  ux-design-specification.md
_bmad-output/research/: meetup-formats-v1.md  prompt-library-v1.md  research-phase-summary.md  retrospective-tools-for-bookclubs.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_create_users.py  002_add_profile_fields_to_users.py  003_create_season_entities.py  004_add_membership_mode_to_seasons.py  005_add_location_mode_address_to_seasons.py
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  seasons.py  users.py
backend/app/core/: database.py  security.py
backend/app/models/: __init__.py  base.py  meetup.py  season.py  season_member.py  user.py
backend/app/schemas/: __init__.py  profile.py  season.py  user.py
backend/app/services/: __init__.py  auth_service.py  profile_service.py  season_service.py
backend/app/utils/: image_utils.py
backend/tests/: test_auth.py  test_profile.py  test_profile_photo.py  test_seasons.py
frontend/: jest.config.js  next.config.js  package-lock.json  package.json
frontend/.next/: prerender-manifest.json  trace  (+1 more)
resources/: DESIGN.md
(+87 files in other folders)
